[project]
name = "langgraph-learning"
version = "0.1.0"
description = "LangGraph Tutorial — notebooks and scripts for graphs, tools, memory, and tracing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.9",
    "langsmith>=0.7.37",
    "notebook>=7.5.5",
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
    "typing>=3.10.0.0",
]
